--- a/Phone/main/res/layout/account_info_two.xml
+++ b/Phone/main/res/layout/account_info_two.xml
@@ -4,10 +4,10 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@drawable/gradient_bg"             
-        android:paddingBottom="@dimen/CONTENT_PADDING"
-        android:paddingLeft="@dimen/CONTENT_PADDING"
-        android:paddingRight="@dimen/CONTENT_PADDING"
-        android:paddingTop="@dimen/CONTENT_PADDING">
+        android:paddingBottom="@dimen/content_padding"
+        android:paddingLeft="@dimen/content_padding"
+        android:paddingRight="@dimen/content_padding"
+        android:paddingTop="@dimen/content_padding">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -58,7 +58,7 @@
                 android:text="@string/account_info_two_id_detail_info_text"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/black"
-                android:textSize="@dimen/LIGHT_TEXT_SIZE" />
+                android:textSize="@dimen/content_padding" />
 
             <EditText
                 android:id="@+id/account_info_two_id_field"
@@ -118,7 +118,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/account_info_two_uid_bar_one"
                 android:layout_below="@+id/account_info_two_uid_bar_one" 
-                android:text="@string/EMPTY"
+                android:text="@string/empty"
 				android:textColor="@color/black"
 				/>
 
@@ -160,7 +160,7 @@
                 android:text="@string/account_info_two_pass_info_text"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/black"
-                android:textSize="@dimen/LIGHT_TEXT_SIZE" />
+                android:textSize="@dimen/light_text_size" />
 
             <EditText
                 android:id="@+id/account_info_two_pass_field"
@@ -217,7 +217,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/account_info_two_pass_bar_one"
                 android:layout_below="@+id/account_info_two_pass_bar_one" 
-                android:text="@string/EMPTY"
+                android:text="@string/empty"
 				android:textColor="@color/black"
 				/>
             
@@ -321,7 +321,7 @@
                 android:layout_below="@+id/feedback_label"
                 android:layout_centerHorizontal="true"
                 android:text="@string/discover_copyright_text"
-                android:textSize="@dimen/LIGHT_TEXT_SIZE" />
+                android:textSize="@dimen/content_padding" />
         </RelativeLayout>
 
     </ScrollView>
