The account registration confirmation page now navigates to the logged in page when the home button is pressed. Activities are setup for the confirmation screen now.

--- a/Phone/main/res/layout/account_info_confirm.xml
+++ b/Phone/main/res/layout/account_info_confirm.xml
@@ -158,7 +158,8 @@
                 android:layout_below="@+id/account_info_confirm_note_label"
                 android:layout_centerHorizontal="true"
                 android:text="@string/home_text" 
-                android:layout_marginTop="8dp"/>
+                android:layout_marginTop="8dp"
+                android:onClick="navigateToHome"/>
             
           <TextView
                 android:id="@+id/feedback_label"
