--- a/Phone/main/res/layout/login.xml
+++ b/Phone/main/res/layout/login.xml
@@ -138,7 +138,7 @@
                 android:visibility="invisible"/>
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/register_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -146,7 +146,6 @@
                 android:clickable="true"
                 android:text="@string/register_now"
                 android:textColor="@color/blue"
-				android:onClick="registerNewUser"
 				android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textSize="@dimen/light_text_size"/>
 
@@ -164,8 +163,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".4"
-                android:text="@string/login_button_text"
-                android:onClick="authenticateUserClick" />
+                android:text="@string/login_button_text" />
         </TableRow>
 
         <TableRow
