Severely modified the InputValidator. It is now a little more generic I guess, and is more easily changeable. It no longer stores any vital information and just stores the state of the check you do. Works good for me for now.Changed the size of the register user 'link' on the login screen. It's much easier to touch now.Added "Invalid input" labels to the account information screen when there is invalid input. The dropdowns and text fields need to be highlighted on bad input. But their input is being checked.Email validation checking is currently not working - needs to somehow validate a *@*.* address I guess.

--- a/Phone/main/res/layout/account_info.xml
+++ b/Phone/main/res/layout/account_info.xml
@@ -120,7 +120,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/account_info_card_expiration_date_label"
-			android:layout_below="@+id/account_info_card_expiration_date_label" />
+			android:layout_below="@+id/account_info_card_expiration_date_label"
+			 />
 
         <Spinner
             android:id="@+id/account_info_year_spinner"
@@ -140,35 +141,56 @@
             android:paddingTop="8dp"
             />
         
-         <TextView
-            android:id="@+id/account_info_ssn_prefix_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/account_info_ssn_info_label"
-            android:text="@string/ssn_prefix"
-            android:textColor="@color/black"
-            android:paddingTop="4dp"
-            />
-         
         <EditText
             android:id="@+id/account_info_ssn_input_field"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/account_info_ssn_info_label"
+            android:layout_below="@+id/account_info_ssn_error_label"
             android:layout_toRightOf="@+id/account_info_ssn_prefix_label"
             android:ems="4"
 		 	android:maxLength="4"
             android:inputType="number"
             android:imeOptions="actionDone"
              />
-
+        
+         <TextView
+             android:id="@+id/account_info_ssn_prefix_label"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_alignParentLeft="true"
+             android:layout_alignTop="@id/account_info_ssn_input_field"
+             android:layout_below="@+id/account_info_ssn_info_label"
+             android:paddingTop="8dp"
+             android:text="@string/ssn_prefix"
+             android:textColor="@color/black" />
+         
+         <TextView
+             android:id="@+id/account_info_ssn_error_label"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_alignRight="@id/account_info_ssn_input_field"
+             android:layout_below="@+id/account_info_ssn_info_label"
+             android:textAppearance="?android:attr/textAppearanceSmall"
+             android:textColor="@color/red" />
+         
+        
+        
+        <TextView
+            android:id="@+id/account_info_card_account_number_error_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/account_information_input_info_label"
+            android:textAppearance="?android:attr/textAppearanceSmall" 
+            android:textColor="@color/red"
+            />
+        
         <EditText
             android:id="@+id/account_info_card_account_number_field"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/account_information_input_info_label"
-            android:layout_below="@+id/account_information_input_info_label"
+            android:layout_below="@+id/account_info_card_account_number_error_label"
             android:ems="16"
             android:inputType="number"
             android:maxLength="16"
@@ -185,12 +207,21 @@
             android:text="@string/account_info_dob_text" 
             android:textColor="@color/black"/>
 
+        <TextView
+            android:id="@+id/account_info_dob_year_error_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@+id/account_info_dob_year_field"
+            android:layout_below="@+id/account_info_dob_label"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/red" />
+        
         <Spinner
             android:id="@+id/account_info_dob_month_spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/account_info_dob_label"
-            android:layout_below="@+id/account_info_dob_label"
+            android:layout_below="@+id/account_info_dob_year_error_label"
             android:layout_marginTop="8dp"
             />
 
@@ -200,7 +231,7 @@
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/account_info_dob_month_spinner"
             android:layout_toRightOf="@id/account_info_dob_month_spinner" />
-
+        
         <EditText
             android:id="@+id/account_info_dob_year_field"
             android:layout_width="wrap_content"
@@ -211,10 +242,7 @@
             android:hint="@string/year_hint"
             android:imeOptions="actionDone"
             android:inputType="number"
-            android:maxLength="4" >
-
-            <requestFocus />
-        </EditText>
+            android:maxLength="4" />
 
         <TableRow
             android:id="@+id/account_info_button_row"
