Added help bubbles to account information screen 2 (when creating a user and such). These start an activity and load the appropriate layout based on which one you click. Updated javascript to reflect all of my coverage that I could remember at the moment.

--- a/Phone/main/res/layout/account_info_two.xml
+++ b/Phone/main/res/layout/account_info_two.xml
@@ -321,6 +321,33 @@
                 android:layout_centerHorizontal="true"
                 android:text="@string/discover_copyright_text"
                 android:textSize="@dimen/content_padding" />
+
+            <ImageView
+                android:id="@+id/ImageView01"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:src="@drawable/helpbubble" />
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignTop="@+id/account_info_two_pass_strength_bar_label"
+                android:layout_toRightOf="@+id/account_info_two_pass_bar_three"
+                android:src="@drawable/helpbubble" 
+                android:onClick="showPasswordStrengthBarHelp"/>
+
+            <ImageView
+                android:id="@+id/ImageView02"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignTop="@+id/account_info_two_uid_strength_bar_label"
+                android:layout_toRightOf="@+id/account_info_two_uid_bar_three"
+                android:src="@drawable/helpbubble" 
+                android:onClick="showIdStrengthBarHelp"/>
+
         </RelativeLayout>
 
     </ScrollView>
