RegistrationCallTwo - Removed unnecessary header declaration. Changed callback reference to a strong reference in RegistrationCallOne. When it was set to weak, it disappeared from me once. RegistrationTwoDetails now extends RegistrationOneDetails. Added logical NOT to JsonMessageErrorResponseParser.java as per Graham's suggestions. Added activity definition in android manifest for the id and password help screens. Changed padding on the register confirmation screen. Removed random question mark bubble on account info two screen. Also specified the input text type for the input fields. Changed the register now link weight on the login screen. It did not show up correctly on a Galaxy S2 that I used (it was 2 lines instead of 1). AccountInformationActivity - Changed RegistrationOne and Two details objects to be private. Now passing the form data from the first screen to the second as an 'extra' on the intent. Since it is needed on the second screen too. AccountInformationConfirmationScreen - Now accepts extras in onCreate so that it can update the confirmation screen with the users information. AccountInformationTwoActivity - Puts all its necessary extras onto the intent for the confirmation screen. Adjusted some code for more readability - less casting of views and junk.

--- a/Phone/main/res/layout/account_info_confirm.xml
+++ b/Phone/main/res/layout/account_info_confirm.xml
@@ -134,6 +134,7 @@
                 android:layout_toRightOf="@id/account_info_confirm_account_stars_label"
                 android:layout_below="@+id/account_info_confirm_email_title_label"
                 android:paddingTop="4dp"
+                android:layout_marginLeft="4dp"
                 android:text="@string/account_info_confirm_account_text"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/black"
