account_info.xml - added error text label for when the provided information did not succeed on the registration request. Changed padding below the error label. strings.xml - added text for the error message in account_info.xml AccountInformationActivity.java - added support for receiving a HTTP/500 -> INTERNAL_ERROR and then handling this error by setting the error label text to the proper error message.

--- a/Phone/main/res/layout/account_info.xml
+++ b/Phone/main/res/layout/account_info.xml
@@ -39,14 +39,20 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/orange"
             android:textStyle="bold" />
-
+        
+        <TextView 
+            android:id="@+id/account_info_error_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+			android:layout_below="@id/account_info_step_label"
+			android:textColor="@color/red"/>
+        
         <TextView
             android:id="@+id/account_info_label_one_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/account_info_step_label"
-            android:layout_below="@+id/account_info_step_label"
-            android:paddingTop="4dp"
+            android:layout_below="@+id/account_info_error_label"
             android:text="@string/account_info_label_one"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/black" />
