AndroidManifest.xml - Removed some whitespace. Added new activity for ForgotCredentials and ForgotUserId. account_info.xml - Renamed the title label to be more generic since we are now using this screen for more than one similar purpose. login.xml - Removed an unecessary table row and replaced it with the TextView that was previously inside it and made it clickable. This also means I was able to remove the unnecessary invisible button that was used as whitespace… resources.xml - Added a new string array resource that is not currently used as it is just hard coded into the activity at the moment. strings.xml - Added new variables for new screens. And a new color. Overall nothing to see here. LoginActivity.java - Added support for the "Forgot User ID or Password?" link. Now starts an activity and works! AccountInformationActivity.java - Added support for forgot password and forgot both options. So this activity will support 3 functions in the future. A user forgetting their pass, id and pass, and registering a new user. Added newlines to the intent creation so it does not exceed 80 chars on the screen. forgot_id.xml - New layout for the forgot ID activity - its different than forgot pass or forgot both. ForgotUserIdActivity.java - Handles and validates proper input. Needs to get a service call though. ForgotCredentialsActivity.java - Main activity for when a user presses the "Forgot User ID or Password?" link from the home screen. Seems to function as required. CustomArrayAdapter.java - A subclass of ArrayAdapter<String> to allow list elements to have those fancy arrow indicators on the ForgotCredentialsActivity activity. big_error.xml - Added generic debugging layout in case it is needed. Should be used when a layout cant get set properly.
If I missed anything it was obviously not important… duh.

--- a/Phone/main/res/layout/forgot_password.xml
+++ b/Phone/main/res/layout/forgot_password.xml
@@ -17,12 +17,12 @@
          	>
 
         <TextView
-            android:id="@+id/account_info_title_label"
+            android:id="@+id/account_info_register_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:text="@string/register_text"
+            android:text="@string/forgot_password_text"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/black"
             android:textStyle="bold" />
@@ -31,9 +31,9 @@
             android:id="@+id/account_info_step_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/account_info_title_label"
+            android:layout_alignLeft="@id/account_info_register_label"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/account_info_title_label"
+            android:layout_below="@id/account_info_register_label"
             android:paddingTop="8dp"
             android:text="@string/account_informaiton_step_lablel_one"
             android:textAppearance="?android:attr/textAppearanceMedium"
