InputValidator - Fixed the year validation. account_info.xml - Fixed onClick in the XML. strings_account_info.xml - Fixed some long lines. Broke 'em up. ForgotPasswordActivity.java - Overstayed its welcome. AccountInformationActivity.java - Removed setupButtons method in favor of executing submitFormInfo from the XML.

--- a/Phone/main/res/layout/account_info.xml
+++ b/Phone/main/res/layout/account_info.xml
@@ -271,7 +271,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/continue_text"
                 android:layout_marginLeft="16dp" 
-                android:onClick="submitCurrentAccountInfo"/>
+                android:onClick="submitFormInfo"/>
 
         </TableRow>
 
