--- a/Phone/main/res/layout/account_info_two.xml
+++ b/Phone/main/res/layout/account_info_two.xml
@@ -58,7 +58,7 @@
                 android:text="@string/account_info_two_id_detail_info_text"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/black"
-                android:textSize="@dimen/content_padding" />
+                android:textSize="@dimen/light_text_size"  />
 
             <EditText
                 android:id="@+id/account_info_two_id_field"
@@ -280,7 +280,8 @@
                 android:layout_alignRight="@+id/account_info_step_label"
                 android:layout_below="@+id/account_info_two_email_field"
                 android:text="@string/submit_text" 
-                android:layout_marginTop="8dp"/>
+                android:layout_marginTop="8dp"
+                android:onClick="checkInputsThenSubmit"/>
             
             <TableRow
             android:id="@+id/account_info_help_row"
