--- a/Phone/main/res/layout/forgot_login.xml
+++ b/Phone/main/res/layout/forgot_login.xml
@@ -18,13 +18,14 @@
 
     
     <ListView
-        android:id="@+id/optionsTable"
+        android:id="@android:id/list"
         android:background="@drawable/rounded_table_corners_no_padding"
         android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/forgot_credentials_label"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true" 
+        android:cacheColorHint="#00000000">
     </ListView>
     
     <TableRow
