--- a/Phone/main/res/values/strings_account_info.xml
+++ b/Phone/main/res/values/strings_account_info.xml
@@ -28,5 +28,7 @@
 	<string name="account_info_two_pass_confirm_text">Confirm Password:</string>
 	<string name="account_info_two_email_text">Email Address:</string>
 	<string name="account_info_two_email_info_text">(Used to confirm receipt of your online account registration.)</string>
+	<string name="account_info_two_id_matches_pass_error_text">User ID and password must not be the same.</string>
+	<string name="account_info_two_username_in_use_error_text">user ID is already in use. Please choose another one.</string>
 	
 </resources>
