Made several style changes towards having a fluent Discover theme

--- a/Phone/main/res/values/color.xml
+++ b/Phone/main/res/values/color.xml
@@ -12,4 +12,13 @@
 	<color name="lightRed">#1fff0000</color>
 	<color name="lightBlue">#d0025D96</color>
 	
+    
+    <color name="primary">#00A8BF</color>
+    <!-- 247 148 30 -->
+    <color name="secondary">#F7941E</color>
+    <!-- 250 181 97 -->
+    <color name="secondary_light">#FAB561</color>
+    <color name="tertiary">#A0A0A0</color>
+    <color name="white_transparent">#A0FFFFFF</color>
+	
 </resources>
