--- a/Phone/main/res/values-v11/styles.xml
+++ b/Phone/main/res/values-v11/styles.xml
@@ -4,8 +4,28 @@
         Base application theme for API 11+. This theme completely replaces
         AppBaseTheme from res/values/styles.xml on API 11+ devices.
     -->
-<!--     <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
-        API 11 theme customizations can go here.
-    </style> -->
+    <!-- Theme.Sherlock.Light.DarkActionBar -->
+    <style name="AppBaseTheme" parent="Theme.Sherlock">
+        <!-- General -->
+        <item name="android:selectableItemBackground">@drawable/ab_selectable_item_background</item>
+        
+        <item name="android:listViewStyle">@style/CustomListView</item>
+        
+        <!-- Action Bar -->
+        <item name="android:actionBarStyle">@style/CustomActionBar</item>
+        <item name="android:actionBarTabStyle">@style/CustomActionBarTabStyle</item>
+    </style>
+    
+    <style name="CustomListView" parent="android:style/Widget.Holo.ListView">
+        <item name="android:listSelector">@drawable/list_selector</item>
+    </style>
+    
+    <style name="CustomActionBar" parent="Widget.Sherlock.ActionBar">
+        <item name="android:background">@drawable/ab_background_holo</item>
+    </style>
+    
+    <style name="CustomActionBarTabStyle" parent="Widget.Sherlock.ActionBar.TabView">
+        <item name="android:background">@drawable/ab_tab_background</item>
+    </style>
 
 </resources>
