--- a/Phone/main/res/layout/login.xml
+++ b/Phone/main/res/layout/login.xml
@@ -169,7 +169,7 @@
         </TableRow>
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/forgot_uid_or_pass_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
@@ -177,7 +177,6 @@
                 android:layout_weight="1"
                 android:layout_marginTop="8dp"
                 android:paddingBottom="8dp"
-                android:onClick="forgotIdAndOrPass"
                 android:text="@string/forgot_id_or_pass_label"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/blue" />
