--- a/Phone/main/res/layout/lock_out_user.xml
+++ b/Phone/main/res/layout/lock_out_user.xml
@@ -56,7 +56,7 @@
                 android:id="@+id/error_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/red" />
+                android:textColor="@color/black" />
 
         </TableRow>
 
