Added clickability to the cancel links.

--- a/Phone/main/res/layout/account_info.xml
+++ b/Phone/main/res/layout/account_info.xml
@@ -262,6 +262,9 @@
                 android:id="@+id/account_info_cancel_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:onClick="goBack"
+                android:padding="8dp"
                 android:text="@string/cancel_text"
                 android:textColor="@color/blue" />
 
