--- a/Phone/main/res/layout/account_info_two.xml
+++ b/Phone/main/res/layout/account_info_two.xml
@@ -278,11 +278,14 @@
 
             <TextView
                 android:id="@+id/account_info_two_cancel_label"
+                android:padding="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignRight="@+id/account_info_two_email_label"
                 android:layout_below="@id/account_info_two_email_field"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
+                android:clickable="true"
+                android:onClick="cancel"
                 android:text="@string/cancel_text"
                 android:textColor="@color/blue" />
 
