--- a/Phone/main/res/layout/forgot_id.xml
+++ b/Phone/main/res/layout/forgot_id.xml
@@ -103,6 +103,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|center_vertical"
+                android:clickable="true"
+                android:onClick="goBack"
                 android:paddingRight="32dp"
                 android:text="@string/cancel_text"
                 android:textColor="@color/blue" />
