Changed padding and made this link more clickable. (Larger click area - padding 8dp all around)

--- a/Phone/main/res/layout/forgot_id.xml
+++ b/Phone/main/res/layout/forgot_id.xml
@@ -105,7 +105,7 @@
                 android:layout_gravity="left|center_vertical"
                 android:clickable="true"
                 android:onClick="goBack"
-                android:paddingRight="32dp"
+                android:padding="8dp"
                 android:text="@string/cancel_text"
                 android:textColor="@color/blue" />
 
