--- a/Phone/main/res/layout/enhanced_account_security.xml
+++ b/Phone/main/res/layout/enhanced_account_security.xml
@@ -12,7 +12,16 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
-
+ <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
+		<LinearLayout
+		    android:focusable="true" android:focusableInTouchMode="true"
+		    android:layout_width="0px" android:layout_height="0px"/>
+		
+		<!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
+		     to prevent the dummy from receiving focus again -->
+		<AutoCompleteTextView android:id="@+id/autotext"
+		    android:layout_width="0dp" android:layout_height="0dp"
+		    android:nextFocusUp="@id/autotext" android:nextFocusLeft="@id/autotext"/>
         <TextView
             android:id="@+id/account_security_label"
             android:layout_width="wrap_content"
