Added support to confirmation screen and the screens before them to setup the confirmation screen to display appropriate text info. Like -> password changed confirmation etc.

--- a/Phone/main/res/values/strings_confirmation.xml
+++ b/Phone/main/res/values/strings_confirmation.xml
@@ -1,16 +1,55 @@
 <resources>
     
-    <!-- Account Info Confirmation Screen -->
-	<string name="account_info_confirm_step_title_text">Registration Confirmation</string>
-	<string name="account_info_confirm_first_paragraph_text">Your registration is complete, you are now logged in and an email has been sent to you.</string>
-	<string name="account_info_confirm_security_precaution_text">As a security precaution, your password and the first 12 digits of your Account number are not shown.</string>
-	<string name="account_info_confirm_summary_text">Your Online Account Information:</string>
+<!-- Account Info Confirmation Screen -->
+	<string name="account_info_confirm_step_title_text">
+	    Registration Confirmation
+	</string>
+	<string name="account_info_confirm_first_paragraph_text">
+	    Your registration is complete, you are now logged in and an email 
+	    has been sent to you.
+	</string>
+	<string name="account_info_confirm_security_precaution_text">
+	    As a security precaution, your password and the first 12 digits of 
+	    your Account number are not shown.
+	</string>
+	<string name="account_info_confirm_summary_text">
+	    Your Online Account Information:
+	</string>
 	<string name="account_info_confirm_id_title_text">User ID</string>
-	<string name="account_info_confirm_email_title_text">E&#8211;mail Address</string>
-	<string name="account_info_confirm_account_title_text">Account Number</string>
-	<string name="account_info_confirm_account_stars_text">**** **** **** </string>
+	<string name="account_info_confirm_email_title_text">
+	    E&#8211;mail Address
+	</string>
+	<string name="account_info_confirm_account_title_text">
+	    Account Number
+	</string>
+	<string name="account_info_confirm_account_stars_text">
+	    **** **** **** 
+	</string>
 	<string name="account_info_confirm_account_text">1337</string>
-	<string name="account_info_confirm_id_placeholder_text">Chuck Yeager</string>
-	<string name="account_info_confirm_note_text">Please Note: If you currently use Secure online Account Numbers, that password has also been changed.</string>
+	<string name="account_info_confirm_id_placeholder_text">
+	    Chuck Yeager
+	</string>
+	<string name="account_info_confirm_note_text">
+	    Please Note: If you currently 
+	    use Secure online Account Numbers, that password has also been changed.
+	</string>
 	
+<!-- Password Change Confirmation Strings -->
+	<string name="password_confirmation_title_text">
+	    Password Change Confirmation
+	</string>
+	<string name="password_confirmation_changed_text">
+	    Your password has been changed, you are now logged in and an 
+	    email has been sent to you.
+	</string>
+	
+	
+<!-- Forgot Both Confirmation Strings -->
+	<string name="forgot_both_title_text">
+	    User ID and Password Change Confirmation
+	</string>
+	<string name="forgot_both_changed_text">
+	    Your password and user ID have been changed, 
+	    you are now logged in and an email has been sent to you.
+	</string>
 </resources>
